Update index.html to add more detail

--- a/index.html
+++ b/index.html
@@ -1,6 +1,44 @@
-<section class="page__content">
-  <h1>Welcome to CRIMA</h1>
-  <p><strong>CRIMA</strong> is a research project focused on <em>evidence-based management of climate risks</em>.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CRIMA – Evidence-Based Management of Climate Risks</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <img src="images/crima-logo.png" alt="CRIMA logo" class="logo" />
+    <h1>CRIMA</h1>
+    <p>Evidence-Based Management of Climate Risks</p>
+  </header>
 
-  <p>This project aims to support local and regional governments in designing policies and actions to respond to climate change by integrating robust scientific methods, stakeholder knowledge, and digital decision-support tools.</p>
-</section>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="#about">About</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <main>
+    <section id="about">
+      <h2>About the Project</h2>
+      <p>CRIMA supports local and regional governments in designing data-driven climate strategies. We integrate scientific methods, stakeholder engagement, and digital decision-support tools to manage climate risks effectively.</p>
+    </section>
+
+    <section id="team">
+      <h2>Our Team</h2>
+      <p>Coming soon...</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: crima@eurac.edu (placeholder)</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Eurac Research</p>
+  </footer>
+</body>
+</html>
