Update index.html to fix logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="images/crima-logo.png" alt="CRIMA logo" class="logo" />
+    <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
     <h1>CRIMA</h1>
     <p>Evidence-Based Management of Climate Risks</p>
   </header>
