Update index.html to fix headers

--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
+
+  <!-- Logo Section (White Background) -->
+  <div class="logo-header">
     <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
+  </div>
+
+  <!-- Red Header with Title and Navigation -->
+  <header class="main-header">
     <h1>CRIMA</h1>
     <p>Evidence-Based Management of Climate Risks</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#about">About</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#about">About</a>
-    <a href="#team">Team</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
+  <!-- Main Content -->
   <main>
     <section id="about">
       <h2>About the Project</h2>
@@ -37,8 +43,10 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Eurac Research</p>
   </footer>
+
 </body>
 </html>
