--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CRIMA – Evidence-Based Management of Climate Risks</title>
+  <title>CRIMA – Evidence-based Management of Climate Risks</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -16,11 +16,11 @@
   <!-- Red Header with Title and Navigation -->
   <header class="main-header">
     <h1>CRIMA</h1>
-    <p>Evidence-Based Management of Climate Risks</p>
+    <p>Evidence-based Management of Climate Risks</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="#about">About</a>
-      <a href="#team">Team</a>
+      <a href="#team">Partners</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -33,7 +33,7 @@
     </section>
 
     <section id="team">
-      <h2>Our Team</h2>
+      <h2>Partners</h2>
       <p>Coming soon...</p>
     </section>
 
