--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
   </header>
 
-  <div class="red-bar">
-    <h1>CRIMA</h1>
+  <div class="main-header">
+<!--     <h1>CRIMA</h1>
     <p>Evidence-Based Management of Climate and Environmental Risks</p>
-    <nav>
+    <nav> -->
       <a href="#about">About</a>
       <a href="#objectives">Objectives</a>
       <a href="#timeline">Timeline</a>
