--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   </div>
 
   <!-- Red Header with Title and Navigation -->
-  <header class="main-header">
+<!--   <header class="main-header">
     <h1>CRIMA</h1>
     <p>Evidence-based Management of Climate Risks</p>
-    <!DOCTYPE html>
-<html lang="en">
+    <!DOCTYPE html> -->
+<!-- <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CRIMA – Evidence-Based Management of Climate Risks</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body> -->
 
-  <header class="logo-header">
+<!--   <header class="logo-header">
     <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
-  </header>
+  </header> -->
 
   <div class="main-header">
 <!--     <h1>CRIMA</h1>
@@ -110,11 +110,11 @@
 
     <section id="partners">
       <h2>Partners</h2>
-      <ul>
+<!--       <ul>
         <li><strong>Eurac Research</strong> – Project coordination and stakeholder engagement</li>
         <li><strong>Free University of Bozen-Bolzano</strong> – Semantic modeling and openEO integration</li>
         <li><strong>Ontopic</strong> – Development of natural language interfaces</li>
-      </ul>
+      </ul> -->
       <div class="partner-logos">
         <img src="eurac_logo.png" alt="Eurac Research" />
         <img src="unibz_logo.png" alt="Free University of Bozen-Bolzano" />
