--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
         <li><strong>Ontopic</strong> – Development of natural language interfaces</li>
       </ul> -->
       <div class="partner-logos">
-        <img src="eurac_logo.png" alt="Eurac Research" />
-        <img src="unibz_logo.png" alt="Free University of Bozen-Bolzano" />
-        <img src="ontopic_logo.png" alt="Ontopic" />
+        <img src="eurac_logo.png" alt="Eurac Research" class="logo" />
+        <img src="unibz_logo.png" alt="Free University of Bozen-Bolzano" class="logo" />
+        <img src="ontopic_logo.png" alt="Ontopic" class="logo" />
       </div>
     </section>
-
+    
     <section id="funding">
       <h2>Funding</h2>
       <p>CRIMA is funded under the <strong>Italian National Recovery and Resilience Plan (PNRR)</strong> as part of the European Union’s NextGenerationEU initiative.</p>
