--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         <li><strong>Ontopic</strong> – Development of natural language interfaces</li>
       </ul> -->
       <div class="partner-logos">
-        <img src="eurac_logo.png" alt="Eurac Research" class="logo" />
-        <img src="unibz_logo.png" alt="Free University of Bozen-Bolzano" class="logo" />
-        <img src="ontopic_logo.png" alt="Ontopic" class="logo" />
+        <img src="eurac_logo.png" alt="Eurac Research" class="partnerlogo" />
+        <img src="unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
+        <img src="ontopic_logo.png" alt="Ontopic" class="partnerlogo" />
       </div>
     </section>
     
