--- a/index.html
+++ b/index.html
@@ -5,36 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CRIMA – Evidence-based Management of Climate Risks</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 </head>
 <body>
 
-  <!-- Logo Section (White Background) -->
+  <!-- White background logo section -->
   <div class="logo-header">
     <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
   </div>
 
-  <!-- Red Header with Title and Navigation -->
-<!--   <header class="main-header">
-    <h1>CRIMA</h1>
-    <p>Evidence-based Management of Climate Risks</p>
-    <!DOCTYPE html> -->
-<!-- <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CRIMA – Evidence-Based Management of Climate Risks</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body> -->
-
-<!--   <header class="logo-header">
-    <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
-  </header> -->
-
+  <!-- Red top bar with nav -->
   <div class="main-header">
-<!--     <h1>CRIMA</h1>
-    <p>Evidence-Based Management of Climate and Environmental Risks</p>
-    <nav> -->
+    <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" />
+    <nav>
       <a href="#about">About</a>
       <a href="#objectives">Objectives</a>
       <a href="#timeline">Timeline</a>
@@ -90,7 +73,7 @@
       <h2>Timeline and Milestones</h2>
       <p>The official project kick-off took place in February 2025. The project spans 36 months and includes the following milestones:</p>
       <ul>
-        <li><strong>MS1 (Month 4):</strong> Requirements analysis (Completed)</li>
+        <li><strong>MS1 (Month 4):</strong> Requirements analysis</li>
         <li><strong>MS2 (Month 20):</strong> Proof of concept – Basic CRIMA system with impact chain modeling and limited query capabilities</li>
         <li><strong>MS3 (Month 32):</strong> Final system – Complete VKG integration, full user interface, ready for pilot scenarios</li>
         <li><strong>MS4 (Month 36):</strong> Evaluation of system through stakeholder testing and demonstration</li>
