--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Red top bar with nav -->
   <div class="main-header">
-    <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" />
+<!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
     <nav>
       <a href="#about">About</a>
       <a href="#objectives">Objectives</a>
@@ -73,10 +73,10 @@
       <h2>Timeline and Milestones</h2>
       <p>The official project kick-off took place in February 2025. The project spans 36 months and includes the following milestones:</p>
       <ul>
-        <li><strong>MS1 (Month 4):</strong> Requirements analysis</li>
-        <li><strong>MS2 (Month 20):</strong> Proof of concept – Basic CRIMA system with impact chain modeling and limited query capabilities</li>
-        <li><strong>MS3 (Month 32):</strong> Final system – Complete VKG integration, full user interface, ready for pilot scenarios</li>
-        <li><strong>MS4 (Month 36):</strong> Evaluation of system through stakeholder testing and demonstration</li>
+        <li><strong>Milestone 1 (Month 4):</strong> Requirements analysis</li>
+        <li><strong>Milestone 2 (Month 20):</strong> Proof of concept – Basic CRIMA system with impact chain modeling and limited query capabilities</li>
+        <li><strong>Milestone 3 (Month 32):</strong> Final system – Complete VKG integration, full user interface, ready for pilot scenarios</li>
+        <li><strong>Milestone 4 (Month 36):</strong> Evaluation of system through stakeholder testing and demonstration</li>
       </ul>
     </section>
 
