Update index.html to add FESR logos

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
     
     <section id="funding">
       <h2>Funding</h2>
-      <p>CRIMA is funded under the <strong>Italian National Recovery and Resilience Plan (PNRR)</strong> as part of the European Union’s NextGenerationEU initiative.</p>
+      <p>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
+      <div class="partner-logos">
+        <img src="fesr_logos.png" alt="FESR Logos" class="partnerlogo" />
     </section>
   </main>
 
