Update index.html to add SDGs

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <section id="synergies">
       <h2>Synergies</h2>
       <p>CRIMA contributes to climate change adaptation planning in South Tyrol and the broader Alpine region. It supports key SDG priorities: Sustainable Cities and Communities (SDG 11), Climate Action (SDG 13), and Life on Land (SDG 15).</p>
+     <div class="partner-logos">
+        <img src="crima_sdgs.png" alt="SDG Logos" class="partnerlogo" />
+      </div>
     </section>
 
     <section id="timeline">
@@ -110,6 +113,7 @@
       <p>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
       <div class="partner-logos">
         <img src="fesr_logos.png" alt="FESR Logos" class="partnerlogo" />
+      </div>
     </section>
   </main>
 
