Update index.html to add partner info and URLs

--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 
     <section id="questions">
       <h2>Research Questions</h2>
-      <p>The research is based on three pillars: VKG data modeling, impact chain conceptualization, and integration with openEO.</p>
+      <p>The research is based on three pillars: VKG data modeling, impact chain conceptualization, and integration with 
+        <a href="https://www.openeo.org/" target="_blank">openEO</a>.
+      </p>
       <ol>
-        <li>How can impact chains be formally modeled within VKGs using OWL 2 QL?</li>
+        <li>How can impact chains be formally modeled within VKGs?</li>
         <li>How can openEO processes be integrated into VKG queries, and which parts should be delegated?</li>
         <li>How can dynamic EO data be semantically linked to VKG instances of impact chain concepts?</li>
       </ol>
@@ -68,7 +70,7 @@
       <h2>Synergies</h2>
       <p>CRIMA contributes to climate change adaptation planning in South Tyrol and the broader Alpine region. It supports key SDG priorities: Sustainable Cities and Communities (SDG 11), Climate Action (SDG 13), and Life on Land (SDG 15).</p>
      <div class="partner-logos">
-        <img src="crima_sdgs.png" alt="SDG Logos" class="partnerlogo" />
+        <img src="crima_sdgs.png" alt="SDG Logos" class="misclogo" />
       </div>
     </section>
 
@@ -96,11 +98,16 @@
 
     <section id="partners">
       <h2>Partners</h2>
-<!--       <ul>
-        <li><strong>Eurac Research</strong> – Project coordination and stakeholder engagement</li>
-        <li><strong>Free University of Bozen-Bolzano</strong> – Semantic modeling and openEO integration</li>
-        <li><strong>Ontopic</strong> – Development of natural language interfaces</li>
-      </ul> -->
+      <p>
+        The CRIMA project is led by 
+        <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a>, 
+        coordinating project management, stakeholder engagement, development of openEO, and the application scenarios. 
+        The 
+        <a href="https://www.unibz.it/" target="_blank">Free University of Bozen-Bolzano</a> 
+        leads the development of semantic models and the integration of openEO with the Virtual Knowledge Graph. 
+        <a href="https://www.ontopic.ai/" target="_blank">Ontopic</a> 
+        is responsible for implementing natural language and LLM-based interfaces for querying the system.
+      </p>
       <div class="partner-logos">
         <img src="eurac_logo.png" alt="Eurac Research" class="partnerlogo" />
         <img src="unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
@@ -112,14 +119,14 @@
       <h2>Funding</h2>
       <p>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
       <div class="partner-logos">
-        <img src="fesr_logos.png" alt="FESR Logos" class="partnerlogo" />
+        <img src="fesr_logos.png" alt="FESR Logos" class="misclogo" />
       </div>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Eurac Research</p>
+    <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
   </footer>
 
 </body>
