--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#objectives">Objectives</a>
       <a href="#timeline">Timeline</a>
       <a href="#partners">Partners</a>
-      <a href="#funding">Funding</a>
+<!--       <a href="#funding">Funding</a> -->
     </nav>
   </div>
 
