Update index.html added logo box behind header logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
   <!-- White background logo section -->
   <div class="logo-header">
+    <div class="logo-box">
+      <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
+    </div>
+  </div>
+
     <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
   </div>
 
