Update index.html change crima logo to white simple

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- White background logo section -->
   <div class="logo-header">
     <div class="logo-box">
-      <img src="crima_logo.png" alt="CRIMA logo" class="logo" />
+      <img src="crima_logo_simple.png" alt="CRIMA logo" class="logo" />
     </div>
   </div>
 
