Update index.html remove logo overlay on banner

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <!-- White background logo section -->
   <div class="logo-header">
-    <div class="logo-box">
+<!--     <div class="logo-box">
       <img src="crima_logo_full_white.png" alt="CRIMA logo" class="logo" />
-    </div>
+    </div> -->
   </div>
 
   <!-- Red top bar with nav -->
