Update index.html to fix assets/logos links

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h2>Synergies</h2>
       <p>CRIMA contributes to climate change adaptation planning in South Tyrol and the broader Alpine region. It supports key SDG priorities: Sustainable Cities and Communities (SDG 11), Climate Action (SDG 13), and Life on Land (SDG 15).</p>
      <div class="partner-logos">
-        <img src="crima_sdgs.png" alt="SDG Logos" class="misclogo" />
+        <img src="assets/crima_sdgs.png" alt="SDG Logos" class="misclogo" />
       </div>
     </section>
 
@@ -101,9 +101,9 @@
     <section id="partners">
       <h2>Partners</h2>
       <div class="partner-logos">
-        <img src="eurac_logo.png" alt="Eurac Research" class="partnerlogo" />
-        <img src="unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
-        <img src="ontopic_logo.png" alt="Ontopic" class="partnerlogo" />
+        <img src="assets/logos/eurac_logo.png" alt="Eurac Research" class="partnerlogo" />
+        <img src="assets/logos/unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
+        <img src="assets/logos/ontopic_logo.png" alt="Ontopic" class="partnerlogo" />
       </div>
       <p>
         The CRIMA project is led by 
@@ -121,7 +121,7 @@
       <h2>Funding</h2>
       <p>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
       <div class="partner-logos">
-        <img src="fesr_logos.png" alt="FESR Logos" class="misclogo" />
+        <img src="assets/logos/fesr_logos.png" alt="FESR Logos" class="misclogo" />
       </div>
     </section>
   </main>
