Update index.html to link pages instead of sections

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
   <div class="main-header">
 <!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
     <nav>
-      <a href="#about">About</a>
-      <a href="#objectives">Objectives</a>
-      <a href="#timeline">Timeline</a>
-      <a href="#partners">Partners</a>
+      <a href="index.html">About</a>
+      <a href="objectives.html">Objectives</a>
+      <a href="timeline.html">Timeline</a>
+      <a href="partners.html">Partners</a>
+      <a href="funding.html">Funding</a>
 <!--       <a href="#funding">Funding</a> -->
     </nav>
   </div>
