--- a/objectives.html
+++ b/objectives.html
@@ -22,9 +22,9 @@
     <nav>
       <a href="index.html">About</a>
       <a href="objectives.html">Objectives</a>
+      <a href="methodology.html">Methodology</a>
       <a href="timeline.html">Timeline</a>
       <a href="partners.html">Partners</a>
-      <a href="funding.html">Funding</a>
 <!--       <a href="#funding">Funding</a> -->
     </nav>
   </div>
