Update methodology.html to fix diagram size

--- a/methodology.html
+++ b/methodology.html
@@ -46,7 +46,7 @@
       <h2>Workflow</h2>
 <!--       <p>CRIMA contributes to climate change adaptation planning in South Tyrol and the broader Alpine region. It supports key SDG priorities: Sustainable Cities and Communities (SDG 11), Climate Action (SDG 13), and Life on Land (SDG 15).</p> -->
      <div class="partner-logos">
-        <img src="assets/crima_diagram.png" alt="Workflow Diagram" class="misclogo" />
+        <img src="assets/crima_diagram.png" alt="Workflow Diagram" class="diagram" />
       </div>
     </section>
 
