--- a/timeline.html
+++ b/timeline.html
@@ -33,7 +33,11 @@
 
     <section id="timeline">
       <h2>Timeline and Milestones</h2>
-      <p>The official project kick-off took place in February 2025. The project spans 36 months and includes the following milestones:</p>
+      <p>The official project kick-off took place in February 2025. </p>
+      <div class="partner-logos">
+        <img src="assets/crima_kickoff.png" alt="Workflow Diagram" class="diagram" />
+      </div>
+      <p>The project spans 36 months and includes the following milestones:</p>
       <ul>
         <li><strong>Milestone 1 (Month 4):</strong> Requirements analysis</li>
         <li><strong>Milestone 2 (Month 20):</strong> Proof of concept – Basic CRIMA system with impact chain modeling and limited query capabilities</li>
