--- a/timeline.html
+++ b/timeline.html
@@ -44,6 +44,9 @@
         <li><strong>Milestone 3 (Month 32):</strong> Final system – Complete VKG integration, full user interface, ready for pilot scenarios</li>
         <li><strong>Milestone 4 (Month 36):</strong> Evaluation of system through stakeholder testing and demonstration</li>
       </ul>
+      <div class="partner-logos">
+        <img src="assets/crima_timeline.png" alt="Workflow Diagram" class="diagram" />
+      </div>
     </section>
 
   </main>
