--- a/partners.html
+++ b/partners.html
@@ -42,7 +42,7 @@
         <img src="assets/logos/eurac_logo.png" alt="Eurac Research" class="partnerlogo" />
       </div>
       <p>
-        The 
+        <br>The 
         <a href="https://www.unibz.it/" target="_blank">Free University of Bozen-Bolzano</a> 
         leads the development of semantic models and the integration of openEO with the Virtual Knowledge Graph. 
       </p>  
@@ -50,7 +50,7 @@
         <img src="assets/logos/unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
       </div>
       <p>
-        <a href="https://www.ontopic.ai/" target="_blank">Ontopic</a> 
+        <br><a href="https://www.ontopic.ai/" target="_blank">Ontopic</a> 
         is responsible for implementing natural language and LLM-based interfaces for querying the system.
       </p>
       <div class="partner-logos">
