--- a/partners.html
+++ b/partners.html
@@ -37,7 +37,7 @@
         <img src="assets/logos/eurac_logo.png" alt="Eurac Research" class="partnerlogo" />
       </div>
       <p>
-        <br>The CRIMA project is led by 
+        The CRIMA project is led by 
         <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a>, 
         coordinating project management, stakeholder engagement, development of openEO, and the application scenarios. <br>
       </p>
@@ -46,7 +46,7 @@
         <img src="assets/logos/unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
       </div>
       <p>
-        <br>The 
+        The 
         <a href="https://www.unibz.it/" target="_blank">Free University of Bozen-Bolzano</a> 
         leads the development of semantic models and the integration of openEO with the Virtual Knowledge Graph. <br>
       </p>  
@@ -55,7 +55,7 @@
         <img src="assets/logos/ontopic_logo.png" alt="Ontopic" class="partnerlogo" />
       </div>    
       <p>
-        <br><a href="https://www.ontopic.ai/" target="_blank">Ontopic</a> 
+        <a href="https://www.ontopic.ai/" target="_blank">Ontopic</a> 
         is responsible for implementing natural language and LLM-based interfaces for querying the system.<br>
       </p>
 
