--- a/timeline.html
+++ b/timeline.html
@@ -33,7 +33,7 @@
 
     <section id="timeline">
       <h2>Timeline and Milestones</h2>
-      <p>On Febraury 20th, 2025 the FESR-funded CRIMA Evidence-Based Management of Climate Risks, officially started with its kick-off meeting at Eurac Research HQ in Bolzano.</p>
+      <p>The official kick-off meeting for CRIMA took place at Eurac Research HQ in Bolzano on Febraury 20th, 2025.</p>
       <div class="partner-logos">
         <img src="assets/crima_kickoff.png" alt="Workflow Diagram" class="diagram" />
       </div>
