Update methodology.html add workflow description

--- a/methodology.html
+++ b/methodology.html
@@ -48,6 +48,30 @@
      <div class="partner-logos">
         <img src="assets/crima_diagram.png" alt="Workflow Diagram" class="diagram" />
       </div>
+      <p>
+        This workflow illustrates the integration of expert knowledge, semantic technologies, and Earth Observation data to support climate risk assessment and adaptation planning.
+      </p>
+      <p>
+        <strong>1. Expert Knowledge</strong> is captured through structured frameworks such as the <em>Impact Chain</em>, representing cause-effect relationships between climate hazards, vulnerabilities, and impacts.
+      </p>
+      <p>
+        <strong>2. Virtual Knowledge Graph:</strong> This conceptual knowledge is transformed into a virtual knowledge graph, allowing it to be navigated, queried, and extended. Semantic web technologies (e.g., ontologies) help link concepts and ensure consistency across data and domains.
+      </p>
+      <p>
+        <strong>3. Process Graphs:</strong> The virtual knowledge graph connects to process graphs, which define workflows for data processing using platforms like <em>openEO</em>. These workflows automate the generation of climate indicators and other analytical outputs.
+      </p>
+      <p>
+        <strong>4. Ontop:</strong> Serves as the data virtualization layer that translates high-level queries into efficient access to distributed data sources, enabling seamless integration between user queries and the underlying data and process graphs.
+      </p>
+      <p>
+        <strong>5. Users:</strong> Users interact with this system through structured or natural language queries, allowing them to assess climate risk, support adaptation strategies, and monitor environmental changes over time.
+      </p>
+      <p>
+        <strong>6. Data:</strong> The data layer includes satellite imagery, spatial datasets, and derived products that are processed and visualized in the context of the conceptual models, ensuring transparent, traceable, and actionable insights.
+      </p>
+      <p>
+        This approach ensures that scientific knowledge and real-world data are interoperable and accessible to decision-makers, fostering informed climate resilience planning.
+      </p>
     </section>
 
   <!-- Footer -->
