--- a/objectives.html
+++ b/objectives.html
@@ -32,30 +32,44 @@
   <main>
     <section id="objectives">
       <h2>Project Objectives</h2>
-      <ul>
-        <li>Develop a VKG that integrates quantitative Earth Observation (EO) data and scientific literature using semantic web technologies.</li>
-        <li>Enable AI-assisted querying and analysis of Big Earth Data.</li>
-        <li>Apply innovative conceptual models (e.g., impact chains) to describe climate risk components and their interrelations.</li>
-        <li>Use openEO APIs and extensions to support data access and processing.</li>
-        <li>Develop user-friendly interfaces including SPARQL and LLM/NLP querying.</li>
-        <li>Demonstrate the system in real-world application scenarios.</li>
-      </ul>
+      <p>
+        CRIMA aims to create an integrated digital framework to enhance the usability and accessibility of complex climate knowledge through the development of a <strong>Virtual Knowledge Graph (VKG)</strong>. This VKG will interlink expert knowledge, Earth Observation (EO) data, and scientific literature using <strong>semantic web technologies</strong>, enabling a deeper understanding of climate risks and their cascading impacts.
+      </p>
+      <p>
+        The project leverages innovative conceptual models—such as <strong>impact chains</strong>—to represent the causal pathways between climate hazards, exposure, vulnerabilities, and adaptation measures. These models act as a bridge between human expertise and computational reasoning, helping structure how risks are understood, analyzed, and addressed.
+      </p>
+      <p>
+        A key objective is to <strong>enable AI-assisted querying and analysis</strong> of Big Earth Data. By combining SPARQL endpoints with <strong>Natural Language Processing (NLP)</strong> and large language models (LLMs), CRIMA will offer user-friendly interfaces that democratize access to complex climate data and knowledge. This includes both <em>structured querying</em> for technical users and <em>natural language querying</em> for non-technical stakeholders.
+      </p>
+      <p>
+        To operationalize these insights, the project will use and extend <strong>openEO APIs</strong>, allowing users to access, process, and visualize EO data in a scalable and standardized way. The system will support reproducible workflows for generating risk indicators, maps, and other decision-support outputs.
+      </p>
+      <p>
+        Finally, CRIMA will <strong>demonstrate the full system in real-world application scenarios</strong>, focusing on the Alpine region, with particular emphasis on South Tyrol. These case studies will validate the framework’s ability to support climate change adaptation planning at local and regional scales, while highlighting challenges such as data harmonization, user engagement, and policy integration.
+      </p>
     </section>
-
-
-    <section id="challenges">
+    
+    <section>
       <h2>Challenges and Opportunities</h2>
       <ul>
-        <li>Integrating multiple knowledge domains: environmental data, vulnerability, and adaptation measures.</li>
-        <li>Making a rich body of scientific knowledge accessible and usable by stakeholders.</li>
-        <li>Supporting non-technical users through intuitive interfaces and semantic tools.</li>
+        <li>Integrating multiple knowledge domains: environmental data, vulnerability assessments, and adaptation strategies.</li>
+        <li>Translating complex scientific insights into actionable knowledge for planners, policymakers, and the public.</li>
+        <li>Developing intuitive interfaces to support non-technical users through semantic search, AI tools, and visual exploration.</li>
+        <li>Ensuring interoperability across distributed data systems and workflows.</li>
       </ul>
     </section>
-
-    <section id="synergies">
+    
+    <section>
       <h2>Synergies</h2>
-      <p>CRIMA contributes to climate change adaptation planning in South Tyrol and the broader Alpine region. It supports key SDG priorities: Sustainable Cities and Communities (SDG 11), Climate Action (SDG 13), and Life on Land (SDG 15).</p>
-     <div class="partner-logos">
+      <p>
+        CRIMA supports climate resilience planning and sustainable development in the Alpine region, with strong relevance to global policy frameworks. It directly contributes to several <strong>United Nations Sustainable Development Goals (SDGs)</strong>:
+      </p>
+      <ul>
+        <li><strong>SDG 11 – Sustainable Cities and Communities:</strong> by improving urban and regional climate risk assessments.</li>
+        <li><strong>SDG 13 – Climate Action:</strong> by supporting mitigation and adaptation planning with science-based tools.</li>
+        <li><strong>SDG 15 – Life on Land:</strong> by monitoring impacts on ecosystems and promoting nature-based solutions.</li>
+      </ul>
+       <div class="partner-logos">
         <img src="assets/crima_sdgs.png" alt="SDG Logos" class="misclogo" />
       </div>
     </section>
