--- a/timeline.html
+++ b/timeline.html
@@ -37,16 +37,17 @@
       <div class="partner-logos">
         <img src="assets/crima_kickoff.png" alt="Workflow Diagram" class="diagram" />
       </div>
-      <p>The project spans 36 months and includes the following milestones:</p>
+      <p><br>The project spans 36 months and includes the following milestones:</p>
+      <div class="partner-logos">
+        <img src="assets/crima_timeline.png" alt="Workflow Diagram" class="diagram" />
+      </div>
       <ul>
         <li><strong>Milestone 1 (Month 4):</strong> Requirements analysis</li>
         <li><strong>Milestone 2 (Month 20):</strong> Proof of concept – Basic CRIMA system with impact chain modeling and limited query capabilities</li>
         <li><strong>Milestone 3 (Month 32):</strong> Final system – Complete VKG integration, full user interface, ready for pilot scenarios</li>
         <li><strong>Milestone 4 (Month 36):</strong> Evaluation of system through stakeholder testing and demonstration</li>
       </ul>
-      <div class="partner-logos">
-        <img src="assets/crima_timeline.png" alt="Workflow Diagram" class="diagram" />
-      </div>
+      
     </section>
 
   </main>
