Update index.html to include diagram

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
       </div>
       <p><strong>CRIMA</strong> focuses on the development of a decision-support system to enhance climate and environmental risk management. The system semantically integrates heterogeneous sources of information using a Virtual Knowledge Graph (VKG) and is powered by AI-supported querying of Big Earth Data.</p>
       <p>It aims to help non-technical users query and interpret complex environmental data through natural language and conceptual models like impact chains. The system will be evaluated in two application scenarios in the Alpine region: one on hydrometeorological events, and one on water scarcity.</p>
-    </section>
 
-    <section id="funding">
-      <h2>Funding</h2>
-      <p>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
+      <div class="partner-logos">
+        <img src="assets/crima_schematic.png" alt="CRIMA Overview" class="diagram" />
+      </div>
+      
+
+      <p><br>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
       <div class="partner-logos">
         <img src="assets/logos/fesr_logos.png" alt="FESR Logos" class="misclogo" />
       </div>
