--- a/index.html
+++ b/index.html
@@ -43,19 +43,15 @@
       </div>
       
 
-<!--       <p><br>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
+      <p><br><br>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
       <div class="partner-logos">
         <img src="assets/logos/fesr_logos.png" alt="FESR Logos" class="misclogo" />
-      </div> -->
+      </div>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p><br>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
-      <div class="partner-logos">
-        <img src="assets/logos/fesr_logos.png" alt="FESR Logos" class="misclogo" />
-      </div>
     <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
   </footer>
 
