Update index.html to add menu options and js

--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
   <!-- Red top bar with nav -->
   <div class="main-header">
 <!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
-    <nav>
+<!--     <nav>
       <a href="index.html">About</a>
       <a href="objectives.html">Objectives</a>
       <a href="methodology.html">Methodology</a>
       <a href="timeline.html">Timeline</a>
-      <a href="partners.html">Partners</a>
+      <a href="partners.html">Partners</a> -->
 <!--       <a href="#funding">Funding</a> -->
+    <nav class="navbar">
+      <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+      <ul class="nav-list">
+        <li><a href="index.html">About</a></li>
+        <li><a href="objectives.html">Objectives</a></li>
+        <li><a href="methodology.html">Methodology</a></li>
+        <li><a href="timeline.html">Timeline</a></li>
+        <li><a href="partners.html">Partners</a></li>
+      </ul>
     </nav>
   </div>
 
@@ -54,6 +63,8 @@
   <footer>
     <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
   </footer>
+
+<script src="script.js"></script>
 
 </body>
 </html>
