--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <a href="partners.html">Partners</a> -->
 <!--       <a href="#funding">Funding</a> -->
     <nav class="navbar">
-      <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+      <div class="menu-toggle" id="mobile-menu">
+        &#9776; <span class="menu-text">Menu</span>
+      </div>
       <ul class="nav-list">
         <li><a href="index.html">About</a></li>
         <li><a href="objectives.html">Objectives</a></li>
