--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <!-- Red top bar with nav -->
   <div class="main-header">
 <!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
-<!--     <nav>
+    <nav>
       <a href="index.html">About</a>
       <a href="objectives.html">Objectives</a>
       <a href="methodology.html">Methodology</a>
       <a href="timeline.html">Timeline</a>
       <a href="partners.html">Partners</a> -->
-<!--       <a href="#funding">Funding</a> -->
-    <nav class="navbar">
+<!--       <a href="#funding">Funding</a>
+<!--     <nav class="navbar">
       <div class="menu-toggle" id="mobile-menu">
         &#9776; <span class="menu-text">Menu</span>
       </div>
@@ -36,7 +36,7 @@
         <li><a href="methodology.html">Methodology</a></li>
         <li><a href="timeline.html">Timeline</a></li>
         <li><a href="partners.html">Partners</a></li>
-      </ul>
+      </ul> -->
     </nav>
   </div>
 
