--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <a href="objectives.html">Objectives</a>
       <a href="methodology.html">Methodology</a>
       <a href="timeline.html">Timeline</a>
-      <a href="partners.html">Partners</a> -->
+      <a href="partners.html">Partners</a>
+      <a href="news.html">News</a> 
 <!--       <a href="#funding">Funding</a>
 <!--     <nav class="navbar">
       <div class="menu-toggle" id="mobile-menu">
