--- a/partners.html
+++ b/partners.html
@@ -25,6 +25,7 @@
       <a href="methodology.html">Methodology</a>
       <a href="timeline.html">Timeline</a>
       <a href="partners.html">Partners</a>
+      <a href="news.html">News</a> 
 <!--       <a href="#funding">Funding</a> -->
     </nav>
   </div>
