--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
   <main>
     <section id="about">
       <h2>About the Project</h2>
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/logos/crima_logo_blue.png" alt="CRIMA Logo" class="misclogo" />
       </div>
       <p><strong>CRIMA</strong> focuses on the development of a decision-support system to enhance climate and environmental risk management. The system semantically integrates heterogeneous sources of information using a Virtual Knowledge Graph (VKG) and is powered by AI-supported querying of Big Earth Data.</p>
       <p>It aims to help non-technical users query and interpret complex environmental data through natural language and conceptual models like impact chains. The system will be evaluated in two application scenarios in the Alpine region: one on hydrometeorological events, and one on water scarcity.</p>
 
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/crima_schematic.png" alt="CRIMA Overview" class="diagram" />
       </div>
       
 
       <p><br><br>CRIMA is funded by the <strong>European Regional Development Fund (FESR)</strong>.</p>
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/logos/fesr_logos.png" alt="FESR Logos" class="misclogo" />
       </div>
     </section>
