--- a/news.html
+++ b/news.html
@@ -45,7 +45,7 @@
     <section id="news">
       <h2>Project Kick-off | February 20, 2025</h2>
 
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/crima_kickoff.png" alt="CRIMA Kick-off" class="diagram" />
       </div>
       
