--- a/objectives.html
+++ b/objectives.html
@@ -66,7 +66,7 @@
         CRIMA supports climate resilience planning and sustainable development in the Alpine region, with strong relevance to global policy frameworks. It directly contributes to several <strong>United Nations Sustainable Development Goals (SDGs)</strong>:
       </p>
       
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/crima_sdgs.png" alt="SDG Logos" class="misclogo" />
       </div>
       
